# gatk4-mutect2-tool

./: .cruft.json  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Dockerfile  MANIFEST.in  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
gatk4_mutect2_tool/: __init__.py  __main__.py  modify_vcf_sample.py  multi_gatk4_mutect2.py
python_project/: __init__.py  __main__.py
tests/: test_modify_vcf_sample.py  test_multi_gatk4_mutect2.py
tests/unit/: test_main.py
