[metadata]
name = gatk4_mutect2_tool
description = Tool for running GATK4 Mutect2
license_files =
	LICENSE
author = Shenglai Li
author_email = sli6@uchicago.edu
url = https://github.com/NCI-GDC/gatk4-mutect2-tool
long_description = file:README.md
long_description_content_type = text/markdown
python_requires = >=3.8
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
install_requires =
zip_safe = False
include_package_data = True
packages = find:
setup_requires = 
	setuptools_scm>=6.0


[options.entry_points]
console_scripts =
        python_project = gatk4_mutect2_tool.__main__:main

[coverage:run]
branch = true
source = gatk4_mutect2_tool
parallel = true

[coverage:report]
show_missing = true
omit =
        .tox/*
exclude_lines =
    \#\s*pragma: no cover
    ^\s*raise AssertionError\b
    ^\s*raise NotImplementedError\b
    ^\s*return NotImplemented\b
    ^\s*raise$
    ^if __name__ == ['"]__main__['"]:$
